kubernetes/argocd/stacks/umpf/umpf.yml
apiVersion: v1
kind: Namespace
metadata:
  name: umpf
---
apiVersion: v1
kind: Service
metadata:
  namespace: umpf
  name: umpf
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: umpf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umpf
  namespace: umpf
  annotations:
    kube-linter.io/ignore-all: "Wtf even is this?"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: umpf
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: umpf
    spec:
      imagePullSecrets:
       - name: acmuic-azurecr-io
      containers:
        - name: umpf
          image: "acmuic.azurecr.io/acm-uic/pathfinder:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: '1000m'
              memory: 1200Mi
            requests:
              cpu: '850m'
              memory: 1000Mi
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umpf
  namespace: umpf
  annotations:
    external-dns.alpha.kubernetes.io/target: app.acmuic.org
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`umpf.acmuic.org`)
      services:
        - kind: Service
          name: umpf
          namespace: umpf
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          strategy: RoundRobin
          weight: 10
  tls:
    secretName: umpf-tls
